policies/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-validator
  annotations:
    cert-manager.io/inject-ca-from: default/admission-webhook-cert
webhooks:
  - name: pod-validator.default.svc
    matchPolicy: Equivalent
    timeoutSeconds: 5
    failurePolicy: Fail
    sideEffects: None
    clientConfig:
      service:
        namespace: default
        name: pod-admission-controller
        path: /validate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        scope: "*"
    admissionReviewVersions:
      - "v1"
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system", "cert-manager"]
    objectSelector:
      matchExpressions:
        - key: app
          operator: NotIn
          values: ["pod-admission-controller"]
